# mysql-sql-coach

./: .env.example  .gitignore  README.md  USAGE.md  main.py  pyproject.toml  sql-coach.spec
.github/workflows/: build-gui.yml  ci.yml
docker/: README.md  docker-compose.yml  init.sql
docs/superpowers/plans/: 2026-07-17-gui-desktop.md
docs/superpowers/specs/: 2026-07-17-gui-desktop-design.md
gui/: __init__.py  app.py  main_window.py  paths.py
gui/storage/: __init__.py  exporter.py  history_store.py
gui/widgets/: __init__.py  benchmark_chart.py  explain_table.py  history_dialog.py  report_view.py  settings_dialog.py  sql_input.py
gui/workers/: __init__.py  analyze_worker.py
sql_coach/: __init__.py  cache.py  cli.py  coach.py  config.py  interactive.py  models.py
sql_coach/ai/: __init__.py  base.py  deepseek.py  factory.py  mock.py  ollama.py  openai_adapter.py
sql_coach/db/: __init__.py  connector.py  mock.py
sql_coach/engine/: __init__.py  explain_runner.py  sql_parser.py
sql_coach/report/: __init__.py  benchmark.py  formatter.py
tests/: test_ai_engine.py  test_analyze_worker.py  test_app_entry.py  test_benchmark.py  test_benchmark_chart.py  test_cli.py  test_coach.py  test_config.py  test_db_connector.py  test_explain_runner.py  test_explain_table.py  test_exporter.py  test_formatter.py  test_history_dialog.py  test_history_store.py  test_main_window.py  test_models.py  test_report_view.py  test_settings_dialog.py  test_sql_input.py  test_sql_parser.py
