[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-coach"
version = "0.1.0"
description = "AI-powered MySQL slow query optimization coach"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Your Name"}]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "sqlparse>=0.4",
    "pymysql>=1.1",
    "openai>=1.0",
    "httpx>=0.25",
    "python-dotenv>=1.0",
    "pyperclip>=1.8",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.5",
    "matplotlib>=3.7",
]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "pytest-cov>=4.0",
    "pytest-qt>=4.0",
]

[project.scripts]
sql-coach = "sql_coach.cli:main"

[tool.setuptools.packages.find]
include = ["sql_coach*", "gui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=sql_coach --cov-report=term-missing"